--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
   top: 160px;
 	left: 280px;
   width: 300px;
-  height: 350px;
+  height: 375px;
 }
 
 .contenedorApp2{
@@ -20,9 +20,18 @@
   top: 160px;
 	left:750px;
   width: 300px;
-  height: 350px;
+  height: 375px;
 }
 
+.contenedorVolver{
+	position: absolute;
+  border-radius: 10px;
+  background: rgba(146, 146, 146, 0.7);
+  top: 550px;
+	left:600px;
+  width: 125px;
+  height: 30px;
+}
 
 
 /*
